--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,16 @@
 		"moduleResolution": "bundler",
 		"importHelpers": true,
 		"target": "ES2022",
-		"module": "ES2022"
+		"module": "ES2022",
+		"baseUrl": "src",
+		"paths": {
+			"@/lib/*": [
+				"lib/*"
+			],
+			"@/components": [
+				"app/components/*"
+			]
+		}
 	},
 	"angularCompilerOptions": {
 		"enableI18nLegacyMessageIdFormat": false,
