--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,9 @@
 			"@/lib/*": [
 				"lib/*"
 			],
+			"@/services/*": [
+				"app/services/*"
+			],
 			"@/components/*": [
 				"app/components/*"
 			]
