💣 feat: initial authentication drop (too messy, i know)

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,6 +25,9 @@
 			"@/services/*": [
 				"app/services/*"
 			],
+			"@/models/*": [
+				"app/models/*"
+			],
 			"@/components/*": [
 				"app/components/*"
 			]
