--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "rxjs": "~7.8.1",
     "tailwindcss-animate": "^1.0.7",
     "tslib": "^2.8.1",
+    "zod": "^3.24.1",
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
