--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-server": "^19.0.5",
     "@angular/router": "^19.0.5",
     "@angular/ssr": "^19.0.6",
+    "@nguniversal/express-engine": "^16.2.0",
     "express": "^4.21.2",
     "rxjs": "~7.8.1",
     "tailwindcss-animate": "^1.0.7",
