--- a/package.json
+++ b/package.json
@@ -1,58 +1,62 @@
 {
-  "name": "website",
-  "version": "0.0.0",
-  "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "watch": "ng build --watch --configuration development",
-    "test": "ng test",
-    "serve:ssr:website": "node dist/website/server/server.mjs",
-    "lint": "ng lint"
-  },
-  "private": true,
-  "dependencies": {
-    "@angular/animations": "^19.0.5",
-    "@angular/cdk": "19.0.4",
-    "@angular/common": "^19.0.5",
-    "@angular/compiler": "^19.0.5",
-    "@angular/core": "^19.0.5",
-    "@angular/forms": "^19.0.5",
-    "@angular/material": "19.0.4",
-    "@angular/platform-browser": "^19.0.5",
-    "@angular/platform-browser-dynamic": "^19.0.5",
-    "@angular/platform-server": "^19.0.5",
-    "@angular/router": "^19.0.5",
-    "@angular/ssr": "^19.0.6",
-    "@nguniversal/express-engine": "^16.2.0",
-    "express": "^4.21.2",
-    "rxjs": "~7.8.1",
-    "tailwindcss-animate": "^1.0.7",
-    "tslib": "^2.8.1",
-    "zod": "^3.24.1",
-    "zone.js": "~0.15.0"
-  },
-  "devDependencies": {
-    "@angular-devkit/build-angular": "^19.0.6",
-    "@angular/cli": "^19.0.6",
-    "@angular/compiler-cli": "^19.0.5",
-    "@types/express": "^5.0.0",
-    "@types/jasmine": "~5.1.5",
-    "@types/node": "^22.10.3",
-    "angular-eslint": "19.0.2",
-    "autoprefixer": "^10.4.20",
-    "eslint": "^9.16.0",
-    "eslint-config-prettier": "^9.1.0",
-    "jasmine-core": "~5.5.0",
-    "karma": "~6.4.4",
-    "karma-chrome-launcher": "~3.2.0",
-    "karma-coverage": "~2.2.1",
-    "karma-jasmine": "~5.1.0",
-    "karma-jasmine-html-reporter": "~2.1.0",
-    "postcss": "^8.4.49",
-    "prettier": "3.4.2",
-    "tailwindcss": "^3.4.17",
-    "typescript": "~5.6.3",
-    "typescript-eslint": "8.18.0"
-  }
+	"name": "website",
+	"version": "0.0.0",
+	"scripts": {
+		"ng": "ng",
+		"start": "ng serve",
+		"build": "ng build",
+		"watch": "ng build --watch --configuration development",
+		"test": "ng test",
+		"serve:ssr:website": "node dist/website/server/server.mjs",
+		"lint": "ng lint"
+	},
+	"private": true,
+	"dependencies": {
+		"@angular/animations": "^19.0.5",
+		"@angular/cdk": "19.0.4",
+		"@angular/common": "^19.0.5",
+		"@angular/compiler": "^19.0.5",
+		"@angular/core": "^19.0.5",
+		"@angular/forms": "^19.0.5",
+		"@angular/material": "19.0.4",
+		"@angular/platform-browser": "^19.0.5",
+		"@angular/platform-browser-dynamic": "^19.0.5",
+		"@angular/platform-server": "^19.0.5",
+		"@angular/router": "^19.0.5",
+		"@angular/ssr": "^19.0.6",
+		"@nguniversal/express-engine": "^16.2.0",
+		"express": "^4.21.2",
+		"rxjs": "~7.8.1",
+		"tailwindcss-animate": "^1.0.7",
+		"tslib": "^2.8.1",
+		"zod": "^3.24.1",
+		"zone.js": "~0.15.0"
+	},
+	"devDependencies": {
+		"@angular-devkit/build-angular": "^19.0.6",
+		"@angular/cli": "^19.0.6",
+		"@angular/compiler-cli": "^19.0.5",
+		"@types/express": "^5.0.0",
+		"@types/jasmine": "~5.1.5",
+		"@types/node": "^22.10.3",
+		"angular-eslint": "19.0.2",
+		"autoprefixer": "^10.4.20",
+		"eslint": "^9.16.0",
+		"eslint-config-prettier": "^9.1.0",
+		"jasmine-core": "~5.5.0",
+		"karma": "~6.4.4",
+		"karma-chrome-launcher": "~3.2.0",
+		"karma-coverage": "~2.2.1",
+		"karma-jasmine": "~5.1.0",
+		"karma-jasmine-html-reporter": "~2.1.0",
+		"postcss": "^8.4.49",
+		"prettier": "3.4.2",
+		"tailwindcss": "^3.4.17",
+		"typescript": "~5.6.3",
+		"typescript-eslint": "8.18.0"
+	},
+	"prettier": {
+		"tabWidth": 4,
+		"useTabs": true
+	}
 }
