--- a/angular.json
+++ b/angular.json
@@ -11,7 +11,7 @@
 			"projectType": "application",
 			"schematics": {
 				"@schematics/angular:component": {
-					"style": "scss"
+					"style": "css"
 				}
 			},
 			"root": "",
@@ -26,7 +26,7 @@
 						"browser": "src/main.ts",
 						"polyfills": ["zone.js"],
 						"tsConfig": "tsconfig.app.json",
-						"inlineStyleLanguage": "scss",
+						"inlineStyleLanguage": "css",
 						"assets": [
 							{
 								"glob": "**/*",
@@ -34,7 +34,11 @@
 							},
 							"src/assets"
 						],
-						"styles": ["src/styles.scss", "src/styles/tokens.scss"],
+						"styles": [
+							"src/styles.scss",
+							"src/styles.css",
+							"src/styles/tokens.scss"
+						],
 						"scripts": [],
 						"server": "src/main.server.ts",
 						"outputMode": "server",
@@ -94,7 +98,7 @@
 							},
 							"src/assets"
 						],
-						"styles": ["src/styles.scss"],
+						"styles": ["src/styles.scss", "src/styles.css"],
 						"scripts": []
 					}
 				},
