--- a/package.json
+++ b/package.json
@@ -12,48 +12,50 @@
 	},
 	"private": true,
 	"dependencies": {
-		"@angular/animations": "^19.0.5",
-		"@angular/cdk": "19.0.4",
-		"@angular/common": "^19.0.5",
-		"@angular/compiler": "^19.0.5",
-		"@angular/core": "^19.0.5",
-		"@angular/forms": "^19.0.5",
-		"@angular/material": "19.0.4",
-		"@angular/platform-browser": "^19.0.5",
-		"@angular/platform-browser-dynamic": "^19.0.5",
-		"@angular/platform-server": "^19.0.5",
-		"@angular/router": "^19.0.5",
-		"@angular/ssr": "^19.0.6",
+		"@angular/animations": "^19.2.1",
+		"@angular/cdk": "19.2.2",
+		"@angular/common": "^19.2.1",
+		"@angular/compiler": "^19.2.1",
+		"@angular/core": "^19.2.1",
+		"@angular/forms": "^19.2.1",
+		"@angular/material": "19.2.2",
+		"@angular/platform-browser": "^19.2.1",
+		"@angular/platform-browser-dynamic": "^19.2.1",
+		"@angular/platform-server": "^19.2.1",
+		"@angular/router": "^19.2.1",
+		"@angular/ssr": "^19.2.1",
 		"@nguniversal/express-engine": "^16.2.0",
 		"express": "^4.21.2",
-		"rxjs": "~7.8.1",
-		"tailwindcss-animate": "^1.0.7",
+		"ng-qrcode": "^19.0.1",
+		"rxjs": "~7.8.2",
 		"tslib": "^2.8.1",
-		"zod": "^3.24.1",
+		"zod": "^3.24.2",
 		"zone.js": "~0.15.0"
 	},
 	"devDependencies": {
-		"@angular-devkit/build-angular": "^19.0.6",
-		"@angular/cli": "^19.0.6",
-		"@angular/compiler-cli": "^19.0.5",
+		"@angular-devkit/build-angular": "^19.2.1",
+		"@angular/cli": "^19.2.1",
+		"@angular/compiler-cli": "^19.2.1",
+		"@tailwindcss/postcss": "^4.0.12",
 		"@types/express": "^5.0.0",
-		"@types/jasmine": "~5.1.5",
-		"@types/node": "^22.10.3",
-		"angular-eslint": "19.0.2",
+		"@types/jasmine": "~5.1.7",
+		"@types/node": "^22.13.9",
+		"angular-eslint": "19.2.0",
 		"autoprefixer": "^10.4.20",
-		"eslint": "^9.16.0",
-		"eslint-config-prettier": "^9.1.0",
-		"jasmine-core": "~5.5.0",
+		"eslint": "^9.22.0",
+		"eslint-config-prettier": "^10.1.1",
+		"jasmine-core": "~5.6.0",
 		"karma": "~6.4.4",
 		"karma-chrome-launcher": "~3.2.0",
 		"karma-coverage": "~2.2.1",
 		"karma-jasmine": "~5.1.0",
 		"karma-jasmine-html-reporter": "~2.1.0",
-		"postcss": "^8.4.49",
-		"prettier": "3.4.2",
-		"tailwindcss": "^3.4.17",
-		"typescript": "~5.6.3",
-		"typescript-eslint": "8.18.0"
+		"postcss": "^8.5.3",
+		"prettier": "3.5.3",
+		"tailwindcss": "^4.0.12",
+		"tailwindcss-animate": "^1.0.7",
+		"typescript": "~5.8.2",
+		"typescript-eslint": "8.26.0"
 	},
 	"prettier": {
 		"tabWidth": 4,
