--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,10 @@
 {
-	"routes": [
+	"version": 2,
+	"public": true,
+	"rewrites": [
 		{
-			"src": "/(.*)",
-			"dest": "/index.html"
+			"source": "/(.*)",
+			"destination": "/index.html"
 		}
 	]
 }
