--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
 	"version": "0.0.0",
 	"scripts": {
 		"ng": "ng",
-		"start": "node -r dotenv/config scripts/env.js && ng serve",
+		"generate-env": "node scripts/env.js",
+		"start": "ng serve",
 		"build": "ng build",
 		"watch": "ng build --watch --configuration development",
 		"test": "ng test",
 		"serve:ssr:website": "node dist/website/server/server.mjs",
-		"lint": "ng lint"
+		"lint": "ng lint",
+		"postinstall": "npm run generate-env"
 	},
 	"private": true,
 	"dependencies": {
