🌟 feat: added style commits to release notes render

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,3 @@
 {
-    "cSpell.words": [
-        "spotify",
-        "tourpass",
-        "tourpasses"
-    ]
+	"cSpell.words": ["bscm", "spotify", "tourpass", "tourpasses"]
 }
